--- a/css/page-style/index.css
+++ b/css/page-style/index.css
@@ -3,47 +3,56 @@
 	margin: 0;
 	padding: 0;
 }
+
 /*让		height	百分比起作用*/
-html,body {
+html,
+body {
 	width: 100%;
-	min-width: 1600px;
+	min-width: 1200px;
 }
+
 /*设置头部大小*/
 header {
 	width: 100%;
 	height: 265px;
 	background-image: url(../../img/背景.png);
-	background-size:100% 100%;
+	background-size: 100% 100%;
 	background-attachment: fixed;
 	margin-bottom: 10px;
 }
+
 /*设置头部左侧*/
 #head-left {
 	width: 60%;
 	height: 265px;
 	float: left;
 }
+
 /*设置头部右侧*/
 #head-right {
 	width: 40%;
 	height: 265px;
 	float: right;
-	background-color:#FFFFFF;
- 	background-color:rgba(0,0,0,0.2);
- 	font-size: 40px;
+	background-color: #FFFFFF;
+	background-color: rgba(0, 0, 0, 0.2);
+	font-size: 40px;
 }
+
 #head-right>li {
 	height: 50px;
 	color: #999999;
 }
+
 #head-right>li>b {
 	color: yellow;
 }
+
 /*设置头部左侧上面div*/
 #head-top {
 	height: 189px;
 	width: 100%;
 }
+
 /*头部左侧上半部文字*/
 #headline-1 {
 	font-size: 40px;
@@ -51,21 +60,25 @@ header {
 	color: #FFFFFF;
 	margin: 20px auto 0px 50px;
 }
+
 #headline-1>b {
 	font-size: 60px;
-	
+
 }
+
 #headline-2 {
 	font-size: 30px;
 	text-decoration: underline;
 	margin: 10px auto auto 50px;
 	font-weight: bold;
 }
+
 /*设置头部左侧下面div*/
 #head-buttom {
 	height: 106px;
 	width: 100%;
 }
+
 /*导航栏*/
 nav {
 	text-align: center;
@@ -73,6 +86,7 @@ nav {
 	height: 106px;
 	float: right;
 }
+
 /*a标签设置*/
 .a {
 	display: block;
@@ -83,21 +97,25 @@ nav {
 	text-align: center;
 	color: yellow;
 }
+
 /*让指定li横向显示并居中*/
 .li {
 	font-size: 17px;
 	/*margin: auto 15px;*/
 	display: inline-block;
-	background-color:#000000;
- 	background-color:rgba(0,0,0,0.3)
+	background-color: #000000;
+	background-color: rgba(0, 0, 0, 0.3)
 }
+
 .li-1 {
 	display: inline-block;
- 	background-color:rgba(255,255,0,0.5)
+	background-color: rgba(255, 255, 0, 0.5)
 }
+
 .li-1>a>b {
 	color: #FFFFFF;
 }
+
 /*搜索框*/
 #search {
 	width: 49%;
@@ -108,6 +126,7 @@ nav {
 	text-align: center;
 	font-size: 40px;
 }
+
 /*内容*/
 article {
 	/*background-color: #00FFFF;*/
@@ -115,29 +134,45 @@ article {
 	width: 80%;
 	height: auto;
 }
+
 /*设置内容样式*/
 article>li>div {
 	display: inline-block;
 }
+
 .body-li {
 	width: auto;
 	height: 150px;
 	list-style: none;
 	margin: 20px;
- 	background-color:rgba(255,255,0,0.3)
-} 
+	background-color: rgba(255, 255, 0, 0.3)
+}
 
 .body-li>.li-box-1>a>img {
 	width: auto;
-	height: 150px;	
+	height: 150px;
 	position: relative;
 }
-.li-box-1,.li-box-2 {
-	float: left;
+
+.body-li>.li-box-3>a>img {
+	width: auto;
+	height: 150px;
+	position: relative;
 }
+
 .li-box-1 {
-	margin-right: 50px;
+	float: left;
+	margin-right: auto;
 }
+
+.li-box-2 {
+	text-align: center;
+}
+
+.li-box-3 {
+	float: right;
+}
+
 .p-1 {
 	width: auto;
 	height: 50px;
@@ -145,17 +180,20 @@ article>li>div {
 	text-decoration: none;
 	font-weight: bold;
 }
+
 .p-2 {
 	width: auto;
 	height: 50px;
 	font-size: 20px;
 	margin-left: 50px;
 }
+
 #li-bottom {
 	width: auto;
 	height: 25px;
 	text-align: center;
 }
+
 #li-bottom>span {
-	margin: auto 15px;
+	margin: auto 20px;
 }
