--- a/CSS/zhang-jie-style.css
+++ b/CSS/zhang-jie-style.css
@@ -86,6 +86,12 @@ header>span {
     padding: 5%;
 }
 
+/* 设置特殊字符红色 */
+.body b {
+    color: red;
+    word-break: break-all;
+}
+
 /* 设置显示代码 */
 .body code {
     display: block;
@@ -116,18 +122,16 @@ header>span {
     margin: auto;
     font-size: 2vw;
     color: rgb(0, 255, 94);
-}
-
-.bottom>p {
+    display: flex;
+    justify-content: space-between;
     padding-bottom: 30px;
-    float: left;
+    padding-top: 50px;
+
 }
 
 .bottom>a {
-    padding-bottom: 30px;
-    float: right;
     text-decoration: none;
-    color: aqua;
+    color: rgb(132, 255, 210);
 }
 
 a:hover {
